tests/ui/coroutine/async_gen_fn.mid.stderr
error: expected one of `extern`, `fn`, `safe`, or `unsafe`, found `gen`
  --> $DIR/async_gen_fn.rs:6:7
   |
LL | async gen fn foo() {}
   |       ^^^ expected one of `extern`, `fn`, `safe`, or `unsafe`

error: aborting due to 1 previous error

